Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/typeArgs/MissingAnnotationValue.out
MissingAnnotationValue.java:11:26: compiler.err.annotation.missing.default.value: A, field
1 error
